/**
 * Define la clase Administrador, que especializa la clase Usuario
 * para agregar las funcionalidades del administrador.
 * 
 * @author Ana Calzada, Leandro Garcia, Fabian Gutierrez
 */

public class Administrador extends Usuario {
    
    public Administrador(String username, String password) {
        super(username, password);
    }
}