public interface ElementoColectivo {
    public abstract void apoyar(Proyecto proyecto);
}